# libs

animator/: setup.py
animator/src/iawake/animator/: processor.py  service.py
animator/src/iawake/animator/test_helpers/: processor.py  service.py
brain/: setup.py
brain/src/iawake/brain/: processor.py  service.py
brain/src/iawake/brain/test_helpers/: service.py
core/: setup.py
core/src/iawake/core/: feed.py  processor.py  service.py  types.py  utils.py
core/src/iawake/core/contrib/: opencv.py  test_helpers.py
core/src/iawake/core/types/: __init__.py  animations.py  types.py
deciders/face_tracking/: setup.py
deciders/face_tracking/src/iawake/face_tracking/: processor.py  (+1 more)
detectors/emotion/: setup.py
detectors/face_detection/: setup.py
detectors/people_detection/: setup.py
emotion/: README.md  setup.py
emotion/src/iawake/emotion/: processor.py  service.py
face_detection/: setup.py
face_detection/src/iawake/face_detection/: processor.py
face_tracker/: setup.py
face_tracker/src/iawake/face_tracker/: processor.py  service.py
facetracker/: README.md  setup.py
facetracker/src/iawake/facetracker/: processor.py  service.py
muse/: setup.py
muse/src/iawake/muse/: service.py  types.py
ops/: k8s.yaml
ops/docker/: Dockerfile
ops/docker/scripts/: entrypoint.sh  setup_ros.sh
people_detection/src/iawake/people_detection/: models.py  processor.py
ros-utils/: setup.py
ros-utils/src/iawake/ros_utils/: service.py  test_helpers.py  utils.py
ros-utils/src/iawake/ros_utils/templates/: CMakeLists.txt  feed.py  package.xml  processor.py
(+26 files in other folders)
