<?xml version="1.0"?>
<package>
    <name>{{ pkg_name }}</name>
    <version>0.0.0</version>
    <description>TODO</description>
    <license>TODO</license>
    <maintainer email="TODO@todo.todo">TODO</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>rospy</build_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>rospy</run_depend>
</package>
